# tectonic

./: .gitignore
crates/engine_teckit/: Cargo.toml  build.rs
crates/engine_teckit/include/teckit/: Compiler.h  Format.h  NormalizationData.h  c-Engine.h  cxx-Engine.h
crates/engine_teckit/src/: Engine.cpp  NormalizationData.c
crates/engine_xdvipdfmx/: Cargo.toml  build.rs
crates/engine_xdvipdfmx/include/xdvipdfmx/: dpx-agl.c  dvipdfmx.c  dvipdfmx.h
crates/engine_xdvipdfmx/src/: lib.rs
crates/engine_xetex/: Cargo.toml  build.rs
crates/engine_xetex/src/: lib.rs
crates/engine_xetex/xetex/: XeTeXOTMath.cpp  XeTeXOTMath.h  constants.h  core.h  engine-interface.c  errors.c  ext.c  ext.h  io.c  io.h  linebreak.c  macos.c  math.c  output.c  pagebuilder.c  pic.c  scaledmath.c  shipout.c  stringpool.c  stringpool.h  swap.h  synctex.c  texmfmp.c  xetex.c  xetex.h
