[package]
name = "tectonic_engine_teckit"
version = "0.1.0"
authors = ["Ryan Farmer <ryan_a_farmer@icloud.com>"]
edition = "2018"
links = "tectonic_engine_teckit"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
tectonic_bridge_core = { path = "../bridge_core" }
tectonic_bridge_flate = { path = "../bridge_flate" }